--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.13",
     "@types/node-fetch": "^3.0.3",
     "axios": "^0.24.0",
+    "express": "^4.17.1",
     "node-fetch": "^3.0.0"
   }
 }
