--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/node-fetch": "^3.0.3",
+    "@types/xml2js": "^0.4.9",
     "axios": "^0.24.0",
     "express": "^4.17.1",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "xml2js": "^0.4.23"
   }
 }
